Java 17 to JUava 8 changed